blog layout and spacing fix

--- a/_sass/_components/blog-post.scss
+++ b/_sass/_components/blog-post.scss
@@ -68,7 +68,7 @@
 }
 
 .post-header {
-  margin-bottom: $section-margins;
+  margin-bottom: 5rem;
 }
 
 .posts {
