--- a/_sass/_components/post-list.scss
+++ b/_sass/_components/post-list.scss
@@ -23,8 +23,8 @@
   li {
     border-bottom: $border-gray;
     display: inline-block;
-    margin-top: $section-margins;
-    padding-bottom: $paragraph-margins-thick;
+    margin-top: 5rem;
+    padding-bottom: 3rem;
     margin-bottom: 0;
 
     &:first-child {
