--- a/_sass/_components/post-pagination.scss
+++ b/_sass/_components/post-pagination.scss
@@ -3,8 +3,8 @@
 
 @mixin widget-small() {
   @include u-padding-y(2);
-  border-bottom: $border-light;
-  border-top: $border-light;
+  border-bottom: 1px solid #f1f1f1;
+  border-top: 1px solid #f1f1f1;
   font-size: $h5-font-size;
   font-weight: $theme-font-weight-bold;
 }
@@ -12,7 +12,7 @@
 .post-pagination {
   @include widget-small;
 
-  .usa-width-one-half {
+  .grid-col-6 {
     &:last-child {
       margin-top: 1.5em;
 
